--- a/interactive resume template/index.html
+++ b/interactive resume template/index.html
@@ -187,7 +187,7 @@
 </p>
 
 <p>
-    <a id="linkedT" href="#1">https://www.likedin.com/sanjeev </a>
+    <a id="linkedT" href="#1">https://www.likedin.com/balu_chougale </a>
 </p>
 
 </div>
@@ -195,7 +195,7 @@
     <div class="col-md-8 py-5">
    <!--second col-->
          <h1 id ="nameT2" class="text-center" style="font-weight: 980">
-         Sanjeev B Karkoon
+         balu_chougale
          </h1> 
         
          <!--objective card-->
